# hydra-beta

./: .dockerignore  .gitignore  .prettierignore  .prettierrc.mjs  Dockerfile  README.md  astro.config.mjs  bun.lockb  declaration.d.ts  eslint.config.js  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/: rustfmt.yml
.github/workflows/: build-tauri.yml  lint-and-test.yml  lint.yml  rustfmt.yml
.husky/: pre-commit  pre-push
.storybook/: main.ts  manager.ts  preview.ts
public/assets/: game-executables.json  steam-developers.json  steam-genres.json  steam-publishers.json  steam-user-tags.json
scripts/: upload-build.ts
src/: api.ts  app.tsx  browser-level.ts  constants.ts  dexie.ts  env.d.ts  middleware.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: auth.json  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  level.rs  lib.rs  main.rs
src/app/: globals.scss  layout.tsx  page.tsx  providers.tsx
src/components/: accordion.tsx  index.ts
src/helpers/: gamepad-layout.ts  index.ts  string-formatting.ts
src/hooks/: index.ts  use-catalogue-assets.hook.ts  use-catalogue-search.hook.ts  use-catalogue-sync.hook.ts  use-catalogue.hook.ts  use-date.hook.ts  use-download-sources.hook.ts  use-format.hook.ts  use-game-page.hook.ts  use-gamepad.hook.ts  use-gamepad.ts  use-library.hook.ts  use-search.hook.ts  use-sidebar.ts  use-user.hook.ts
src/layouts/: globals.scss  header.tsx  layout.astro  sidebar.tsx
src/pages/: _app.tsx  catalogue.astro  catalogue.tsx  gamepad.tsx  (+5 more)
(+185 files in other folders)
